--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ts-lib",
   "version": "0.0.4",
   "license": "MIT",
+  "type": "module",
   "files": [
     "dist",
     "index.d.ts",
@@ -17,7 +18,7 @@
   },
   "scripts": {
     "dev": "vite serve example",
-    "lint": "tslint --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "lint": "eslint",
     "prebuild": "rimraf dist",
     "build": "tsc --module commonjs && vite build",
     "test": "vitest --coverage --run",
@@ -36,20 +37,19 @@
     }
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/node": "^18.17.0",
-    "@vitest/coverage-v8": "^0.34.4",
+    "@vitest/coverage-v8": "^1.6.0",
     "commitizen": "^4.3.0",
-    "eslint": "^8.45.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.8.0",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^9.0.0",
-    "typescript": "~5.1.6",
-    "vite": "^4.4.6",
-    "vitepress": "^1.0.0-rc.10",
-    "vitest": "^0.34.4"
+    "typescript": "^5.4.5",
+    "vite": "^5.3.5",
+    "vitepress": "^1.3.1",
+    "vitest": "^1.6.0"
   }
 }
